--- a/Midterm/django/tasks/templates/tasks/index.html
+++ b/Midterm/django/tasks/templates/tasks/index.html
@@ -1,9 +1,17 @@
-{% if latest_tasks_list %}
-    <ul>
-    {% for task in latest_tasks_list %}
-        <li><a href="/tasks/{{ task.id }}/">{{ task.title }}</a></li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No tasks are available.</p>
-{% endif %}
+<div>
+    <div style="text-align: center; margin: 1em;font-size: larger; font-weight: bold;">All tasks</div>
+    <div style="margin: auto; width: 50%; border: 3px solid green; padding: 10px;">
+        {% if latest_tasks_list %}
+            <ul>
+            {% for task in latest_tasks_list %}
+                <li><a href="/tasks/{{ task.id }}/">{{ task.title }}</a></li>
+            {% endfor %}
+            </ul>   
+        {% else %}
+            <p>No tasks are available.</p>
+        {% endif %}
+    </div>
+    <div style="margin: auto; width: 50%; border: 3px solid orange; padding: 10px;">
+        <a href="create/">Create new task</a>
+    </div>
+</div>
