feat: finished code for midterm

--- a/Midterm/django/tasks/templates/tasks/detail.html
+++ b/Midterm/django/tasks/templates/tasks/detail.html
@@ -10,6 +10,6 @@
         <li><a href="incomplete">Set task as incomplete</a></li>
         <li><a href="delete">Delete task</a></li>
         <li><a href="edit">Edit task</a></li>
-        <li><a href="..">Back</a></li>
+        <li><a href="/tasks/">Back</a></li>
     </ul>
 </div>
