fix: fixed create view and added back options on views

--- a/Midterm/django/tasks/templates/tasks/task_form.html
+++ b/Midterm/django/tasks/templates/tasks/task_form.html
@@ -40,5 +40,9 @@
         </form>
     </div>
     {% endif %}
-    
+</div>
+<div style="margin: auto; width: 50%; border: 3px solid orange; padding: 10px;">
+    <ul>
+        <li><a href="/tasks/">To all tasks</a></li>
+    </ul>
 </div>
