--- a/Assignment_3/django/blogs_manager/static/posts/css/styles.css
+++ b/Assignment_3/django/blogs_manager/static/posts/css/styles.css
@@ -1,4 +1,4 @@
-/* static/myapp/css/styles.css */
+/* static/posts/css/styles.css */
 body {
     font-family: Arial, sans-serif;
     background-color: #f9f9f9;
