--- a/Assignment_3/django/posts/templates/posts/base.html
+++ b/Assignment_3/django/posts/templates/posts/base.html
@@ -11,7 +11,7 @@
             <h1>My Blog</h1>
             <nav>
                 <ul>
-                    <li><a href="{% url 'index' %}">Home</a></li>
+                    <li><a href="/posts/{{ sub_domen }}/">Home</a></li>
                 </ul>
             </nav>
         </header>
